[package]
name = "rminions"
version = "0.1.0"
authors = ["brandon phelps <bwp44f@mst.edu>"]
edition = "2018"


[features]
default = []
CAN = ["socketcan"]

[dependencies]
rand="0.7.3"
rlua="0.16.2"
reqwest = {version="^0.11", features=["blocking", "json"]}
serde = {version= "^1.0.0", features=["derive"]}
serde_json = { version="^1.0.0" }
postgres = "0.19.1"


[dependencies.sdl2]
version="0.34"
default-features = false
# features = "bundled", how to mark this as unix / linux only? 
features = ["ttf", "image"]
optional = false


[dependencies.socketcan]
socketcan="*"
optional = true

