[package]
name = "rminions"
version = "0.1.0"
authors = ["brandon phelps <bwp44f@mst.edu>"]
edition = "2018"


[features]
default = []

[dependencies]
rand="0.7.3"
rlua="0.16.2"
rocket = { path = "../Rocket/core/lib" }
reqwest = {version="^0.11", features=["blocking", "json"]}
serde = {version= "^1.0.0", features=["derive"]}
serde_json = { version="^1.0.0" }
postgres = {version="0.19.1", features=["with-chrono-0_4"]}
chrono = "0.4.0"

[dependencies.rocket_dyn_templates]
path = "../Rocket/contrib/dyn_templates"
features = ["handlebars", "tera"]

[dependencies.sdl2]
version="0.34"
default-features = false
# features = "bundled", how to mark this as unix / linux only? 
features = ["ttf", "image"]
optional = false


[[bin]]
name = "vidlid"
path = "src/vidlid.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "basic_tcp"
path = "src/basic_threaded_server.rs"